# Cry_HPSocket

./: README.md
Client/: Game.cryproject  system.cfg  user.cfg
Client/Code/: CMakeLists.txt  GameConfiger.cpp  GameConfiger.h  GameEnv.h  GameObjectCreatHelper.cpp  GameObjectCreatHelper.h  GamePlugin.cpp  GamePlugin.h  HPSocketPluginProxy.cpp  HPSocketPluginProxy.h  PkgBody.h  StdAfx.cpp  StdAfx.h
Client/Code/Animation/ProceduralClip/: ProceduralClipAiming.cpp  ProceduralClipLooking.cpp
Client/Code/Animation/ProceduralContext/: ProceduralContextAim.cpp  ProceduralContextAim.h  ProceduralContextHelpers.h  ProceduralContextLook.cpp  ProceduralContextLook.h
Client/Code/Components/: LocalPlayerComponent.cpp  LocalPlayerComponent.h  NetPlayerComponent.cpp  NetPlayerComponent.h  SpawnPointComponent.cpp  SpawnPointComponent.h
Client/Code/Components/PlayerComponents/: PlayerAnimationComponent.cpp  PlayerAnimationComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  PlayerViewComponent.cpp  PlayerViewComponent.h
Client/Code/FGNodes/: ClientNode.cpp
Client/Code/MsgHandlers/: AllNetPlayerInfoHandler.cpp  LocalPlayerLoginHandler.cpp  NetPlayerLoginHandler.cpp  PlayerAnimationHandler.cpp  PlayerTransfromHandler.cpp
Client/Plugins/HPSocketPlugin/: HPSocketPlugin.cryproject
Client/Plugins/HPSocketPlugin/3rds/: 3rd path.txt
Client/Plugins/HPSocketPlugin/Code/: CMakeLists.txt  HPSocketPluginEnv.h  HPSocketSerializerContainer.cpp  HPSocketSerializerContainer.h  HPSocketTCPPackClientNode.cpp  HPSocketTCPPackClientService.cpp  HPSocketTCPPackClientService.h  HPSocketTCPPackClientWrapper.cpp  HPSocketTCPPackClientWrapper.h  HPSocketXmlHelper.cpp  HPSocketXmlHelper.h  PluginDll.cpp  PluginDll.h  StdAfx.cpp  StdAfx.h
Client/Plugins/HPSocketPlugin/Code/Common/HPSocketPluginApi/: HPSocketSerializer.h  IHPSocketClientLIstener.h  IHPSocketPlugin.h  PkgHeader.h  msghandlerregister.h
Server/3rds/: 3rd path.txt
Server/Config/: my_log.conf
Server/Debug/x64/: HPSocket4C_D.lib
Server/Src/: DataHandler.cpp  DataHandler.h  DataPool.cpp  DataPool.h  MsgHandlerAction.cpp  MsgHandlerAction.h  MsgLogicDirectHandler.cpp  MsgLogicDirectHandler.h  MsgLogicHandlerBase.cpp  MsgLogicHandlerBase.h  MsgLogicPeriodicalHandler.cpp  MsgLogicPeriodicalHandler.h  PkgBody.h  PkgHeader.h  ServerService.cpp  ServerService.h  TcpPackServerMain.cpp  easylogging++.cpp  easylogging++.h  stdafx.cpp  stdafx.h
Server/Sulotion/: GameServer.sln
Server/Sulotion/TcpPackServer/: TcpPackServer.vcxproj  TcpPackServer.vcxproj.filters
